[workspace]
members = [
  "DEGwer2023",
  "abc100",
  "abc102",
  "abc103",
  "abc104",
  "abc105",
  "abc106",
  "abc108",
  "abc109",
  "abc110",
  "abc111",
  "abc112",
  "abc113",
  "abc114",
  "abc115",
  "abc116",
  "abc117",
  "abc118",
  "abc119",
  "abc120",
  "abc121",
  "abc122",
  "abc123",
  "abc124",
  "abc126",
  "abc127",
  "abc129",
  "abc130",
  "abc131",
  "abc132",
  "abc133",
  "abc134",
  "abc135",
  "abc136",
  "abc137",
  "abc138",
  "abc139",
  "abc141",
  "abc142",
  "abc143",
  "abc144",
  "abc145",
  "abc146",
  "abc147",
  "abc148",
  "abc149",
  "abc150",
  "abc151",
  "abc152",
  "abc153",
  "abc154",
  "abc155",
  "abc156",
  "abc157",
  "abc158",
  "abc159",
  "abc160",
  "abc161",
  "abc162",
  "abc163",
  "abc164",
  "abc165",
  "abc166",
  "abc167",
  "abc168",
  "abc169",
  "abc170",
  "abc171",
  "abc172",
  "abc173",
  "abc174",
  "abc175",
  "abc176",
  "abc177",
  "abc178",
  "abc179",
  "abc180",
  "abc181",
  "abc182",
  "abc183",
  "abc184",
  "abc185",
  "abc186",
  "abc187",
  "abc188",
  "abc189",
  "abc190",
  "abc191",
  "abc192",
  "abc193",
  "abc194",
  "abc195",
  "abc196",
  "abc197",
  "abc198",
  "abc199",
  "abc20",
  "abc200",
  "abc201",
  "abc202",
  "abc203",
  "abc204",
  "abc205",
  "abc206",
  "abc207",
  "abc208",
  "abc209",
  "abc210",
  "abc211",
  "abc212",
  "abc213",
  "abc214",
  "abc215",
  "abc216",
  "abc217",
  "abc218",
  "abc219",
  "abc220",
  "abc221",
  "abc222",
  "abc223",
  "abc224",
  "abc225",
  "abc226",
  "abc227",
  "abc228",
  "abc229",
  "abc230",
  "abc231",
  "abc232",
  "abc233",
  "abc234",
  "abc235",
  "abc236",
  "abc237",
  "abc238",
  "abc239",
  "abc240",
  "abc241",
  "abc242",
  "abc243",
  "abc244",
  "abc245",
  "abc246",
  "abc247",
  "abc248",
  "abc250",
  "abc251",
  "abc252",
  "abc254",
  "abc255",
  "abc256",
  "abc257",
  "abc258",
  "abc259",
  "abc260",
  "abc261",
  "abc262",
  "abc263",
  "abc264",
  "abc265",
  "abc266",
  "abc267",
  "abc268",
  "abc269",
  "abc270",
  "abc271",
  "abc272",
  "abc273",
  "abc274",
  "abc275",
  "abc276",
  "abc277",
  "abc278",
  "abc279",
  "abc280",
  "abc281",
  "abc282",
  "abc283",
  "abc284",
  "abc285",
  "abc286",
  "abc287",
  "abc288",
  "abc289",
  "abc290",
  "abc291",
  "abc292",
  "abc293",
  "abc294",
  "abc295",
  "abc296",
  "abc297",
  "abc298",
  "abc299",
  "abc300",
  "abc301",
  "abc302",
  "abc303",
  "abc304",
  "abc305",
  "abc306",
  "abc307",
  "abc308",
  "abc309",
  "abc310",
  "abc311",
  "abc312",
  "abc313",
  "abc314",
  "abc315",
  "abc317",
  "abc318",
  "abc319",
  "abc320",
  "abc321",
  "abc322",
  "abc323",
  "abc324",
  "abc325",
  "abc326",
  "abc327",
  "abc328",
  "abc329",
  "abc330",
  "abc331",
  "abc332",
  "abc333",
  "abc334",
  "abc42",
  "abc43",
  "abc45",
  "abc47",
  "abc49",
  "abc50",
  "abc51",
  "abc52",
  "abc53",
  "abc54",
  "abc55",
  "abc57",
  "abc58",
  "abc59",
  "abc60",
  "abc61",
  "abc63",
  "abc64",
  "abc65",
  "abc66",
  "abc67",
  "abc68",
  "abc69",
  "abc70",
  "abc71",
  "abc72",
  "abc73",
  "abc75",
  "abc76",
  "abc77",
  "abc78",
  "abc79",
  "abc80",
  "abc81",
  "abc82",
  "abc83",
  "abc84",
  "abc85",
  "abc86",
  "abc87",
  "abc88",
  "abc89",
  "abc90",
  "abc91",
  "abc92",
  "abc93",
  "abc94",
  "abc95",
  "abc96",
  "abc97",
  "abc98",
  "abc99",
  "acl_practice",
  "adt_easy_20231017_1",
  "adt_medium_20231017_1",
  "agc12",
  "agc25",
  "agc27",
  "agc29",
  "agc35",
  "agc45",
  "agc46",
  "agc50",
  "agc55",
  "agc58",
  "agc59",
  "agc60",
  "agc61",
  "agc62",
  "agc63",
  "agc64",
  "agc65",
  "ahc11",
  "ahc12",
  "ahc13",
  "ahc21",
  "ahc22",
  "ahc24",
  "ahc25",
  "ahc26",
  "ahc27",
  "ahc29",
  "ahc9",
  "aising2020",
  "apg4b",
  "arc100",
  "arc107",
  "arc110",
  "arc111",
  "arc114",
  "arc117",
  "arc127",
  "arc137",
  "arc138",
  "arc141",
  "arc142",
  "arc143",
  "arc144",
  "arc145",
  "arc146",
  "arc147",
  "arc148",
  "arc149",
  "arc150",
  "arc151",
  "arc152",
  "arc153",
  "arc154",
  "arc155",
  "arc156",
  "arc157",
  "arc158",
  "arc159",
  "arc16",
  "arc160",
  "arc161",
  "arc162",
  "arc163",
  "arc164",
  "arc165",
  "arc166",
  "arc167",
  "arc168",
  "arc169",
  "arc20",
  "arc21",
  "arc33",
  "arc36",
  "arc43",
  "arc46",
  "arc57",
  "arc74",
  "arc76",
  "arc77",
  "arc80",
  "arc81",
  "arc85",
  "asprova8",
  "bcu30",
  "bcu30-2018-qual",
  "bcu302019qual",
  "birthday0410",
  "bitflyer2018final",
  "cf16-relay-open",
  "cf17-relay-open",
  "cf18-relay-open",
  "chokudai-s001",
  "chokudai-s002",
  "code-thanks-festival-2015-open",
  "codefes2014middle",
  "codefes2014quala",
  "codefes2015relay",
  "codefes2018quala",
  "codefes2018qualb",
  "codeformula2014final",
  "codeformula2014quala",
  "codequeen2023final",
  "codethanksfes2017",
  "codethanksfes2018",
  "colopl2018quala",
  "cpsco2019s1",
  "cpsco2019s2",
  "cpsco2019s3",
  "cpsco2019s4",
  "ddcc2016-qual",
  "ddcc2017-qual",
  "ddcc2019final",
  "ddcc2019qual",
  "discovery2016final",
  "dwacon2017-prelims",
  "dwango2015prelims",
  "editor-update-test",
  "edpc",
  "exawizards2019",
  "fps-virtual",
  "fuka5",
  "geocon2013",
  "gw2015",
  "indeednow2015finala",
  "indeednow2015finalb",
  "indeednow2015qualb-c",
  "iroha2019day1",
  "iroha2019day2",
  "iroha2019day3",
  "joi2022",
  "joi2022yo2",
  "joi2023ho",
  "joi2023yo1a",
  "joi2023yo1b",
  "joi2024yo1a",
  "joi2024yo1b",
  "joi2024yo1c",
  "joi2024yo2",
  "joig2021",
  "joig2022",
  "joig2023",
  "joyacon2023",
  "joyacon2024",
  "judge-update-20204",
  "k2pc",
  "keyence2021",
  "kupc2012pr",
  "kupc2015",
  "kupc2016",
  "kupc2017",
  "kupc2018",
  "kupc2019",
  "kupc2020",
  "kupc2021",
  "language-test-ver1",
  "math-and-algorithm",
  "maximum-cup-2018",
  "mayocon20221219",
  "monamieHB2021",
  "msol2019c",
  "msol2019d",
  "mujin2018",
  "mujinpc2016",
  "nadafes2022day2",
  "newjudge-202308-algorithm",
  "nikkei2019-2qual",
  "njpc2017",
  "nomura2020c",
  "nyc2015",
  "otemae2019",
  "pakencamp2018day2",
  "pakencamp2018day3",
  "pakencamp2019day3",
  "pakencamp2019day4",
  "pakencamp2020day1",
  "pakencamp2020day2",
  "pakencamp2020day2a",
  "pakencamp2021day3",
  "pakencamp2022day1",
  "pakencamp2022day2",
  "pakencamp2022day3",
  "past1",
  "past10",
  "past11",
  "past12",
  "past13",
  "past14",
  "past15",
  "past16",
  "past2",
  "past3",
  "past4",
  "past5",
  "past6",
  "past7",
  "past8",
  "past9",
  "pgbattle2022",
  "pgbattle2023",
  "project-euler",
  "qupc2014",
  "qupc2018",
  "rs_test",
  "s8pc-1",
  "s8pc-2",
  "s8pc-3",
  "s8pc5",
  "s8pc6",
  "soundhound2018",
  "soundhound2018c",
  "summerfes2018",
  "tdpc",
  "tenka1-2012final",
  "tenka1-2014qualb-b",
  "tenka1-2015final",
  "tenka1-2015quala",
  "tenka1-2015qualb",
  "tenka1-2015qualb-b",
  "tenka1-2016quala",
  "tenka1-2016qualb",
  "tenke90",
  "tessoku",
  "tkppc",
  "tkppc2016",
  "tkppc3",
  "tkppc4day1",
  "tkppc4day2",
  "tkppc6day1",
  "tkppc6day2",
  "tokiomarine2020c",
  "toyota2023springfinal",
  "tricky",
  "ttpc2015",
  "ttpc2019",
  "ttpc2022",
  "tupc2022",
  "ukuku09",
  "utpc2011",
  "utpc2022",
  "wtf22day1",
  "wupc2019",
  "wupc2nd",
  "xmascon16",
  "yahooprocon2017qual",
  "abc335",
]
exclude = []
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ac-library-rs = "=0.1.1"
bitset = { git = "https://github.com/tayu0110/tayu-procon.git", package = "bitset" }
complex = { git = "https://github.com/tayu0110/tayu-procon.git", package = "complex" }
convolution = { git = "https://github.com/tayu0110/tayu-procon.git", package = "convolution" }
ds = { git = "https://github.com/tayu0110/tayu-procon.git", package = "ds", features = [
  "full",
] }
fenwick-tree = { git = "https://github.com/tayu0110/tayu-procon.git", package = "fenwick-tree" }
flow = { git = "https://github.com/tayu0110/tayu-procon.git", package = "flow" }
geometry = { git = "https://github.com/tayu0110/tayu-procon.git", package = "geometry" }
graph = { git = "https://github.com/tayu0110/tayu-procon.git", package = "graph" }
itertools = "=0.11.0"
math = { git = "https://github.com/tayu0110/tayu-procon.git", package = "math" }
matrix = { git = "https://github.com/tayu0110/tayu-procon.git", package = "matrix" }
mincost-flow = { git = "https://github.com/tayu0110/tayu-procon.git", package = "mincost-flow" }
montgomery-modint = { git = "https://github.com/tayu0110/tayu-procon.git", package = "montgomery-modint" }
num = "=0.4.1"
ordered-float = "4.2.0"
permutohedron = "=0.2.4"
polynomial = { git = "https://github.com/tayu0110/tayu-procon.git", package = "polynomial" }
proconio = { version = "=0.4.5", features = ["derive"] }
rand = "=0.8.5"
rational = { git = "https://github.com/tayu0110/tayu-procon.git", package = "rational" }
regex = "=1.9.1"
rustc-hash = "=1.1.0"
segtree = { git = "https://github.com/tayu0110/tayu-procon.git", package = "segtree" }
static-modint = { git = "https://github.com/tayu0110/tayu-procon.git", package = "static-modint" }
string = { git = "https://github.com/tayu0110/tayu-procon.git", package = "string" }
suffix-array = { git = "https://github.com/tayu0110/tayu-procon.git", package = "suffix-array" }
superslice = "=1.0.0"
unionfind = { git = "https://github.com/tayu0110/tayu-procon.git", package = "unionfind" }
utility = { git = "https://github.com/tayu0110/tayu-procon.git", package = "utility" }
wavelet-matrix = { git = "https://github.com/tayu0110/tayu-procon.git", package = "wavelet-matrix" }
