[package]
name = "abc163"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs.workspace = true
convolution.workspace = true
ds.workspace = true
fenwick-tree.workspace = true
flow.workspace = true
geometry.workspace = true
graph.workspace = true
itertools.workspace = true
math.workspace = true
mincost-flow.workspace = true
montgomery-modint.workspace = true
num.workspace = true
ordered-float.workspace = true
permutohedron.workspace = true
polynomial.workspace = true
proconio.workspace = true
rand.workspace = true
rational.workspace = true
regex.workspace = true
rustc-hash.workspace = true
segtree.workspace = true
static-modint.workspace = true
string.workspace = true
suffix-array.workspace = true
superslice.workspace = true
unionfind.workspace = true
utility.workspace = true
