[package]
name = "abc20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
either = "1.5.3"
fixedbitset = "0.2.0"
im-rc = "14.3.0"
indexmap = "1.3.2"
itertools = "0.9.0"
itertools-num = "0.1.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
nalgebra = "0.20.0"
ndarray = "0.13.0"
num = "0.2.1"
num-derive = "0.3.0"
ordered-float = "1.0.2"
permutohedron = "0.2.4"
petgraph = "0.5.0"
proconio = "0.3.6"
rand = "0.7.3"
rand_distr = "0.2.2"
rustc-hash = "1.1.0"
smallvec = "1.2.0"
text_io = "0.1.8"
whiteread = "0.5.0"
