[package]
name = "abc300"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
math = { version = "0.1.0", path = "../../tayu-procon/math" }
num = "0.2.1"
proconio = { version = "0.3.8", features = ["derive"] }
static-modint = { version = "0.1.0", path = "../../tayu-procon/modint/static-modint" }
