[package]
name = "abc70"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convolution-simd = { version = "0.1.0", path = "../../tayu-procon/convolution-simd" }
flow = { version = "0.1.0", path = "../../tayu-procon/flow" }
geometry = { version = "0.1.0", path = "../../tayu-procon/geometry" }
itertools = "0.9.0"
itertools-num = "0.1.3"
lazy_static = "1.4.0"
math = { version = "0.1.0", path = "../../tayu-procon/math" }
mincost-flow = { version = "0.1.0", path = "../../tayu-procon/mincost-flow" }
modint = { version = "0.1.0", path = "../../tayu-procon/modint" }
nalgebra = "0.20.0"
ndarray = "0.13.0"
num = "0.2.1"
num-derive = "0.3.0"
permutohedron = "0.2.4"
petgraph = "0.5.0"
proconio = { version = "0.3.8", features = ["derive"] }
rand = "0.7.3"
rand_distr = "0.2.2"
segtree = { version = "0.1.0", path = "../../tayu-procon/segtree" }
string = { version = "0.1.0", path = "../../tayu-procon/string" }
suffix-array = { version = "0.1.0", path = "../../tayu-procon/suffix-array" }
