[package]
name = "joi2006yo"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-library-rs = "=0.1.1"
bitset = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
complex = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
convolution = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
cpgraph = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
fenwick-tree = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
flow = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
geometry = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
graph = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
itertools = "=0.11.0"
math = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
matrix = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
mincost-flow = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
montgomery-modint = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
num = "=0.4.1"
permutohedron = "=0.2.4"
polynomial = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
proconio = { version = "=0.4.5", features = ["derive"] }
rand = "=0.8.5"
rational = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
regex = "=1.9.1"
rustc-hash = "=1.1.0"
segtree = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
static-modint = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
string = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
superslice = "=1.0.0"
unionfind = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
utility = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0" }
ds = { git = "https://github.com/tayu0110/tayu-procon.git", version = "0.1.0", features = ["full",] }
