[package]
name = "joi2023ho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs = "=0.1.1"
convolution = { version = "0.1.0", path = "../../tayu-procon/convolution" }
fenwick-tree = { version = "0.1.0", path = "../../tayu-procon/fenwick-tree" }
flow = { version = "0.1.0", path = "../../tayu-procon/flow" }
geometry = { version = "0.1.0", path = "../../tayu-procon/geometry" }
graph = { version = "0.1.0", path = "../../tayu-procon/graph" }
itertools = "=0.11.0"
math = { version = "0.1.0", path = "../../tayu-procon/math" }
mincost-flow = { version = "0.1.0", path = "../../tayu-procon/mincost-flow" }
montgomery-modint = { version = "0.1.0", path = "../../tayu-procon/modint/montgomery-modint" }
num = "=0.4.1"
permutohedron = "=0.2.4"
polynomial = { version = "0.1.0", path = "../../tayu-procon/polynomial" }
proconio = { version = "=0.4.5", features = ["derive"] }
rand = "=0.8.5"
rational = { version = "0.1.0", path = "../../tayu-procon/rational" }
regex = "=1.9.1"
rustc-hash = "=1.1.0"
segtree = { version = "0.1.0", path = "../../tayu-procon/segtree" }
static-modint = { version = "0.1.0", path = "../../tayu-procon/modint/static-modint" }
string = { version = "0.1.0", path = "../../tayu-procon/string" }
suffix-array = { version = "0.1.0", path = "../../tayu-procon/suffix-array" }
superslice = "=1.0.0"
unionfind = { version = "0.1.0", path = "../../tayu-procon/unionfind" }
utility = { version = "0.1.0", path = "../../tayu-procon/utility" }
