[package]
name = "s8pc6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convolution-simd = { version = "0.1.0", path = "../../tayu-procon/convolution-simd" }
fenwick-tree = { version = "0.1.0", path = "../../tayu-procon/fenwick-tree" }
flow = { version = "0.1.0", path = "../../tayu-procon/flow" }
geometry = { version = "0.1.0", path = "../../tayu-procon/geometry" }
itertools = "0.9.0"
math = { version = "0.1.0", path = "../../tayu-procon/math" }
mincost-flow = { version = "0.1.0", path = "../../tayu-procon/mincost-flow" }
montgomery-modint = { version = "0.1.0", path = "../../tayu-procon/modint/montgomery-modint" }
num = "0.2.1"
permutohedron = "0.2.4"
polynomial = { version = "0.1.0", path = "../../tayu-procon/polynomial" }
proconio = { version = "0.3.8", features = ["derive"] }
rand = "0.7.3"
rational = { version = "0.1.0", path = "../../tayu-procon/rational" }
regex = "1.3.6"
segtree = { version = "0.1.0", path = "../../tayu-procon/segtree" }
static-modint = { version = "0.1.0", path = "../../tayu-procon/modint/static-modint" }
string = { version = "0.1.0", path = "../../tayu-procon/string" }
suffix-array = { version = "0.1.0", path = "../../tayu-procon/suffix-array" }
unionfind = { version = "0.1.0", path = "../../tayu-procon/unionfind" }
